istio/egress/sftp/istio-egress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp-svc
  namespace: istio-egress
spec:
  clusterIP: 172.30.92.28
  ports:
  - name: tcp-22
    port: 22
    protocol: TCP
    targetPort: 22
