istio/egress/sftp/istio-egress-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: sftp-gw
  namespace: istio-egress
spec:
  selector:
    egress-system: custom-egress
  servers:
  - hosts:
    - sftp-svc.istio-egress.svc.cluster.local
    port:
      name: tls-443-sftp
      number: 443
      protocol: TLS
    tls:
      mode: ISTIO_MUTUAL
