istio/egress/sftp/app-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: sftp-dr
  namespace: app
spec:
  exportTo:
  - .
  host: custom-egress.istio-egress.svc.cluster.local
  subsets:
  - name: sftp
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: sftp-svc.istio-egress.svc.cluster.local
